--- a/app/src/main/res/layout/completable_activity.xml
+++ b/app/src/main/res/layout/completable_activity.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <Button
+        android:id="@+id/btn_completable"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="do some thing" />
+    <TextView
+        android:id="@+id/command_completable"
+        android:fontFamily="monospace"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
