--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,11 +40,22 @@
         android:id="@+id/map"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:text="map"
+        app:layout_constraintRight_toRightOf="@id/composable"
         app:layout_constraintLeft_toLeftOf="@id/composable"
-        app:layout_constraintTop_toBottomOf="@id/composable"/>
+        app:layout_constraintTop_toBottomOf="@id/composable" />
+
+    <Button
+        android:id="@+id/zip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="zip"
+        app:layout_constraintEnd_toEndOf="@+id/flowable"
+        app:layout_constraintLeft_toRightOf="@id/map"
+        app:layout_constraintStart_toStartOf="@+id/flowable"
+        app:layout_constraintTop_toBottomOf="@id/flowable" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
